data/all_generated_tests/raw_wast_tests/nop_InvalidorInconsistentControlFlowGraph_558.wast
;; 9. **`nop` Inside Memory Manipulation Controls**:    - Include `nop` within `memory.grow` or `memory.init` operations. Ensure the CFG properly interprets no operational impact despite apparent complex constructs.    - Constraint: Tests `nop` integration within memory operation CFG without altering their logic.

(assert_invalid
  (module
    (memory 1)
    (func (result i32)
      (memory.grow (nop))))
  "type mismatch"
)